modernizer changes